Fix task section alignment issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -126,6 +126,10 @@ body {
   font-size: 2.5rem;
 }
 
+.task {
+  padding: 7px;
+}
+
 .task-element {
   display: grid;
   grid-template-columns: 1.75fr 2.5fr 1fr 1fr 1fr;
@@ -137,6 +141,7 @@ body {
   overflow: hidden;
   min-height: 40px;
   padding: 0 7px;
+  word-break: break-all;
 }
 
 .task-button-container {
@@ -146,8 +151,7 @@ body {
 }
 
 .task-desc {
-  overflow: hidden;
-  text-overflow: ellipsis;
+  word-break: break-all;
 }
 
 .task-desc-ta::placeholder {
@@ -292,9 +296,14 @@ select[name="colors"] {
     width: 100%;
   }
 
-  .task-form,
   .project-form {
     flex-direction: row;
+    margin-bottom: 1rem;
+  }
+
+  .task-form {
+    display: grid;
+    grid-template-columns: 1.75fr 2.5fr 1fr 1fr 1fr;
     margin-bottom: 1rem;
   }
 
